--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.5.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "console": "./bin/console"
+  },
   "dependencies": {
     "coffee-script": "~1.6.3"
   },
